# ssb-utdanning

./: .cookiecutter.json  .cruft.json  .gitattributes  .gitignore  00_klass.ipynb  01_klass.ipynb  03_sporre.ipynb  04_proc.ipynb  CONTRIBUTING.md  DEV_README.md  LICENSE  Makefile  README.md  SECURITY.md  behov_vgu.md  index.ipynb  noxfile.py  pyproject.toml  requirements.txt  settings.ini  sonar-project.properties
.github/workflows/: docs.yml  release.yml  tests.yml
demo/: Datadoc.ipynb  UtdData.ipynb  UtdKatalog.ipynb  convert_formats.ipynb  create_test_omk_kat.ipynb  create_test_skolereg.ipynb  create_vigo.ipynb  datadoc_model_understand.ipynb  formats_fromSAS.ipynb  formats_rewrite.ipynb  forste_demo.ipynb  katalogtesting.ipynb  nuskat_open.ipynb  orgnrkontroll.py  skoleregister_open.ipynb  utd_data_demo.ipynb
docs/: _config.yml  conf.py  index.html  index.md  klass.html  proc.html  reference.md  sidebar.json  sporre.html  ssb_utdanning.data.rst  ssb_utdanning.format.rst  ssb_utdanning.katalog.kataloger.rst  ssb_utdanning.katalog.rst  ssb_utdanning.orgnrkontroll.rst  ssb_utdanning.paths.rst  ssb_utdanning.rst
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
fellesfunksjoner_360/formater/: skoleregister.py
fellesfunksjoner_360/kvalitet/innledende/: grunnlag.py
fellesfunksjoner_360/nus/: avvik.py  omkodingskatalog.py
fellesfunksjoner_360/orgnr/: avvik.py  gyldighet.py  kobler.py  oppdater.py
fellesfunksjoner_360/regnskap/: avslutter.py  forbereder.py  makro.py
notebooks/: convert_formats.ipynb  nuskat_open.ipynb  skoleregister_open.ipynb
notebooks/runtime/1_samle_inn/: 00_Data_innlesing_fra_kilder.ipynb
src/ssb_utdanning/: Untitled.ipynb  __init__.py  __main__.py  config.py  utdanning_logger.py
src/ssb_utdanning/data/: __init__.py  dtypes.py  nudb.py  utd_data.py
src/ssb_utdanning/format/: __init__.py  formats.py  sas_format_parsing.py
src/ssb_utdanning/katalog/: __init__.py  katalog.py  katalog_utils.py
src/ssb_utdanning/orgnrkontroll/: __init__.py  create_test_omk_kat.ipynb  create_test_skolereg.ipynb  create_vigo.ipynb  orgnrkontroll.py  orgnrkontroll_outdated.py  to_do.md
src/ssb_utdanning/paths/: __init__.py  get_paths.py  versioning.py
ssb_fellesfunksjoner_360/: _nbdev.py  klass.py  proc.py  sporre.py
tests/: __init__.py  conftest.py  create_folder_w_sasfiles.py  test_UtdFormat.py  test_UtdFormat_efr.py  test_functions.py  test_get_format.py  test_get_path.py  test_info_stored_formats.py  test_main.py  test_sas_format_parsing.py  test_store_format.py  write_test_formats.py
tests/test_data/: create_mock_data.py  test_utd_data.py  test_utd_data_dapla.py
tests/test_format/: test_UtdFormat.py  test_get_format.py  test_get_path.py  test_sas_format_parsing.py  test_store_format.py  write_test_formats.py
tests/test_katalog/: create_mock_katalogs.py  test_UtdKatalog.py
tests/test_orgnrkontroll/: create_mock_orgnr_files.py  test_orgnrkontroll.py
tests/test_paths/: create_mock_path_files.py  test_get_paths.py  test_versioning.py
utd_felles/: __init__.py  config.py  fellesfunksjoner_config.py  utd_felles_config.py
utd_felles/data/: auto_dtype.py  dtypes.py
utd_felles/format/: UtdFormat.py  __init__.py  apply.py  convert_sas_files_json.ipynb  formats.py  formats_toml.py  get_formats.py  klass.py  nuskat.py  nye_problemstillinger.md  problemstillinger.md  sas_format_parsing.py  skoleregister.py  store_format.py  store_format_python.py  test_functions.ipynb  testing.ipynb
utd_felles/format/json_temp/: eierf_2023-05-25T10:52:13.json  eierfnr_2023-05-25T10:52:13.json  evufjer_2023-05-25T10:52:13.json  filavsl_2023-05-25T10:52:13.json  gradmrk_2023-05-25T10:52:13.json  heldel_2023-05-25T10:52:13.json  kilde_2023-05-25T10:52:13.json  kildek_2023-05-25T10:52:13.json  kode_ut_2023-05-25T10:52:13.json  komp_2023-05-25T10:52:13.json  ktrinn_2023-05-25T10:52:13.json  kurstri_2023-05-25T10:52:13.json  lasse_2023-05-25T10:52:13.json  mdelr_2023-05-25T10:52:13.json  nace02s_2023-05-25T10:52:13.json  nace_2023-05-25T10:52:13.json  orgform_2023-05-25T10:52:13.json  realkom_2023-05-25T10:52:13.json  rectype_2023-05-25T10:52:13.json  reg_tb_2023-05-25T10:52:13.json  regtype_2023-05-25T10:52:13.json  sektor_2023-05-25T10:52:13.json  skobo_2023-05-25T10:52:13.json  skolesl_2023-05-25T10:52:13.json  sosbak_2023-05-25T10:52:13.json  sosbakb_2023-05-25T10:52:13.json  sslag_2023-05-25T10:52:13.json  status_2023-05-25T10:52:13.json  studret_2023-05-25T10:52:13.json  uhgrmrk_2023-05-25T10:52:13.json  utd_2023-05-25T10:52:13.json  utdplan_2023-05-25T10:52:13.json  utfall_2023-05-25T10:52:13.json  utfalla_2023-05-25T10:52:13.json  utfallc_2023-05-25T10:52:13.json  utveks_2023-05-25T10:52:13.json
utd_felles/format/old_sas_programs/: a01_ISCED97_siffer.sas  kilde_EG.sas  (+3 more)
utd_felles/katalog/: katalog.py  katalog_utils.py  nuskat.py  skoleregister.py
utd_felles/redigering/: uh_gruppering.py
utd_felles/verktoy/: miljo.py
utdanning_fellesfunksjoner/data/: nudb.py
utdanning_fellesfunksjoner/katalog/: nus.py
utdanning_fellesfunksjoner/verktoy/: miljo.py
(+15 files in other folders)
