[tool.poetry]
name = "utd-fellesfunksjoner-python"
version = "0.0.1"
description = ""
authors = ["Carl F. Corneil <aecorn@gmail.com>"]
license = "MIT"
packages = [{ include = "utd_felles"},]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dapla-toolbelt = "^1.3.2"
python-dateutil = "^2.8.2"
ssb-fagfunksjoner = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[[tool.poetry.source]]
name = "nexus"
url = "http://pl-nexuspro-p.ssb.no:8081/repository/pypi-proxy/simple"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
